[package]
name = "bitcoinvert"
version = "0.1.6"
description = "CLI tool that fetches Bitcoin exchange rates from Blockchain.info and shows conversions to other currencies/denominations"
authors = ["Gabriel Comte"]
edition = "2021"
rust-version = "1.61.0"
repository = "https://github.com/gcomte/bitcoinvert"
license = "MIT"


[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.7"
exitcode = "1.1.2"
home-config = { version = "0.6.0", features = ["yaml"] }
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
si-unit-prefix = "1.0.0"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tabled = "0.20.0"
thiserror = "2.0.12"
thousands = "0.2.0"
typetag = "0.2"
lazy_static = "1.5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
